--- a/style.css
+++ b/style.css
@@ -3,8 +3,18 @@
 html,body{
   height: 100%;
   width: 100%;
-  font-family: 'Poppins' , sans-serif;
+  /*font-family: 'Poppins' , sans-serif;*/
+  font-family: Arial;
   color:#222;
+}
+
+a {
+  color: #43aea0;
+}
+
+a:hover {
+  color: #00d3b8;
+  text-decoration: none;
 }
 
 .navbar{
@@ -271,10 +281,119 @@ Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 */
 
+/*--------------------------------------------------------------
+# Our Portfolio
+--------------------------------------------------------------*/
+/*
+.row {
+  margin: 8px -16px;
+}*/
+
+/* Add padding BETWEEN each column (if you want) */
+/*.row,
+.row > .column {
+  padding: 8px;
+}*/
+
+/* Create three equal columns that floats next to each other */
+.columne {
+  display: none; /* Hide columns by default */
+}
+
+/* Clear floats after rows */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Content */
+.contente {
+  background-color: white;
+  padding: 10px;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn1 {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+}
+
+/* Add a grey background color on mouse-over */
+.btn1:hover {
+  background-color: #ddd;
+}
+
+/* Add a dark background color to the active button */
+.btn1.active {
+  background-color: #666;
+   color: white;
+}
+
+/*========SERVICES SECTION=============*/
+.icon{
+  font-size:35px;
+  color:#70b9b0 ;
+}
+.services .icon-box {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.services .icon {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.services .icon i {
+  color: #70b9b0;
+  font-size: 42px;
+}
+
+.services .title {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.services .title a {
+  color: #343a40;
+  transition: 0.3s;
+}
+
+.services .icon-box:hover .title a {
+  color: #70b9b0;
+}
+
+.services .description {
+  line-height: 24px;
+  font-size: 14px;
+}
 
 
+/*--==========================================HEADER ====================================--*/
+#header {
+  height: 80px;
+  transition: all 0.5s;
+  z-index: 997;
+  transition: all 0.5s;
+  padding: 20px 0;
+  background: #2d6760;
+}
 
-
-
-
+#header.header-scrolled {
+  background: #1d443f;
+  height: 60px;
+  padding: 10px 0;
+}
 
